Dynamic comment loading. Collapsed comments are loaded through AJAX when expanded for the first time. Ratings setting fixed. Enable/disable flag now working as expected. Minor changes to comments template

--- a/styles/slashcomments-comment.css
+++ b/styles/slashcomments-comment.css
@@ -1,13 +1,13 @@
 div.toggle_area,
 div.non_toggle_area {
+  overflow:hidden;
   border: 1px solid #ddd;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
 }
 
-div.toggle_label,
-div.toggle_label * {
+div.toggle_label {
   background:#eee;
   color: #999;
 }
