--- a/styles/slashcomments.css
+++ b/styles/slashcomments.css
@@ -66,7 +66,7 @@ span.scomments_info {
   margin-bottom:0em;
 }
 
-#center .comment-content form {
+.scomments_container form {
   margin-bottom:0px;
   display:inline;
 }
